--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 # IntelliJ Platform Artifacts Repositories
-# -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
+# -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
 
-pluginGroup = com.github.cheblin.slimenum
+pluginGroup = org.unirail.slimenum
 pluginName_ = SlimEnum
 pluginVersion = 0.0.1
 pluginSinceBuild = 201
 pluginUntilBuild = 203.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2020.1.4, 2020.2.4, 2020.3.2
+pluginVerifierIdeVersions = 2020.1.4, 2020.2.3, 2020.3
 
 platformType = IC
-platformVersion = 2020.1
+platformVersion = 2020.3.1
 platformDownloadSources = true
-# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
+# Plugin Dependencies -> https://www.jetbrains.org/intellij/sdk/docs/basics/plugin_structure/plugin_dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = com.intellij.java
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://kotlinlang.org/docs/reference/using-gradle.html#dependency-on-the-standard-library for details.
