--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -12,7 +12,7 @@ build:
   # comments: 1
 
 config:
-  validation: true
+  validation: false
   warningsAsErrors: false
   # when writing own rules with new properties, exclude the property path e.g.: 'my_rule_set,.*>.*>[my_property]'
   excludes: ''
@@ -142,8 +142,6 @@ coroutines:
   GlobalCoroutineUsage:
     active: false
   RedundantSuspendModifier:
-    active: false
-  SleepInsteadOfDelay:
     active: false
   SuspendFunWithFlowReturnType:
     active: false
@@ -477,15 +475,11 @@ potential-bugs:
   active: false
   Deprecation:
     active: false
-  DontDowncastCollectionTypes:
-    active: false
   DuplicateCaseInWhenExpression:
     active: false
   EqualsAlwaysReturnsTrueOrFalse:
     active: false
   EqualsWithHashCodeExist:
-    active: false
-  ExitOutsideMain:
     active: false
   ExplicitGarbageCollectionCall:
     active: false
@@ -548,9 +542,6 @@ style:
     conversionFunctionPrefix: 'to'
   DataClassShouldBeImmutable:
     active: false
-  DestructuringDeclarationWithTooManyEntries:
-    active: false
-    maxDestructuringEntries: 3
   EqualsNullCall:
     active: false
   EqualsOnSignatureLine:
@@ -584,7 +575,6 @@ style:
   FunctionOnlyReturningConstant:
     active: false
     ignoreOverridableFunction: true
-    ignoreActualFunction: true
     excludedFunctions: 'describeContents'
     excludeAnnotatedFunction: ['dagger.Provides']
   LibraryCodeMustSpecifyReturnType:
@@ -609,7 +599,6 @@ style:
     ignoreNamedArgument: true
     ignoreEnums: false
     ignoreRanges: false
-    ignoreExtensionFunctions: true
   MandatoryBracesIfStatements:
     active: false
   MandatoryBracesLoops:
@@ -623,8 +612,6 @@ style:
   MayBeConst:
     active: false
   ModifierOrder:
-    active: false
-  MultilineLambdaItParameter:
     active: false
   NestedClassesVisibility:
     active: false
@@ -675,8 +662,6 @@ style:
   UnnecessaryAnnotationUseSiteTarget:
     active: false
   UnnecessaryApply:
-    active: false
-  UnnecessaryFilter:
     active: false
   UnnecessaryInheritance:
     active: false
