--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = org.unirail.slimenum
-pluginName_ = SlimEnum
+pluginName = SlimEnum
 pluginVersion = 0.0.5
 pluginSinceBuild = 202
 pluginUntilBuild = 203.*
