--- a/gradle.properties
+++ b/gradle.properties
@@ -4,25 +4,27 @@
 pluginGroup = org.unirail.slimenum
 pluginName = SlimEnum
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.8
+pluginVersion = 0.0.10
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 211
-pluginUntilBuild = 222.*
+pluginUntilBuild = 223.*
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 
 platformType = IC
-platformVersion = 2022.1
+platformVersion = 2022.3
+
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = com.intellij.java
+platformPlugins =com.intellij.java
 
-# Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.4
-# Opt-out flag for bundling Kotlin standard library.
-# See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
+gradleVersion = 7.6
+
+# Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+# Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
+org.gradle.unsafe.configuration-cache = true
