--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = org.unirail.slimenum
+pluginGroup = xyz.unirail.slimenum
 pluginName = SlimEnum
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.10
-# See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-# for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 211
-pluginUntilBuild = 223.*
-# IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 
+# Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
+pluginSinceBuild = 221
+pluginUntilBuild = 231.*
+
+# IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
 platformVersion = 2022.3
 
@@ -20,11 +20,19 @@ platformVersion = 2022.3
 platformPlugins =com.intellij.java
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.6
+gradleVersion = 8.1
 
-# Opt-out flag for bundling Kotlin standard library -> https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
-# suppress inspection "UnusedProperty"
+# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.unsafe.configuration-cache = true
+org.gradle.configuration-cache = true
+
+# Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching = true
+
+# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
+systemProp.org.gradle.unsafe.kotlin.assignment = true
+
+# Temporary workaround for Kotlin Compiler OutOfMemoryError -> https://jb.gg/intellij-platform-kotlin-oom
+kotlin.incremental.useClasspathSnapshot = false
